--- a/package.json
+++ b/package.json
@@ -21,18 +21,24 @@
     "@ionic/vue-router": "^8.0.0",
     "ionicons": "^7.0.0",
     "vue": "^3.3.0",
-    "vue-router": "^4.2.0"
+    "vue-router": "^4.5.0",
+    "vue-youtube-embed": "^2.2.2",
+    "vue3-youtube": "^0.1.9"
   },
   "devDependencies": {
     "@capacitor/cli": "6.2.0",
+    "@types/youtube": "^0.1.0",
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.3.0",
+    "autoprefixer": "^10.4.20",
     "cypress": "^13.5.0",
     "eslint": "^8.35.0",
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^22.1.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
     "terser": "^5.4.0",
     "typescript": "~5.6.2",
     "vite": "~5.2.0",
