--- a/package.json
+++ b/package.json
@@ -1,51 +1,53 @@
 {
-  "name": "littlepostie",
-  "private": true,
-  "version": "0.0.1",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc && vite build",
-    "preview": "vite preview",
-    "test:e2e": "cypress run",
-    "test:unit": "vitest",
-    "lint": "eslint ."
-  },
-  "dependencies": {
-    "@capacitor/android": "^6.2.0",
-    "@capacitor/app": "6.0.2",
-    "@capacitor/core": "^6.2.0",
-    "@capacitor/haptics": "6.0.2",
-    "@capacitor/keyboard": "6.0.3",
-    "@capacitor/screen-orientation": "^6.0.3",
-    "@capacitor/status-bar": "6.0.2",
-    "@ionic/vue": "^8.0.0",
-    "@ionic/vue-router": "^8.0.0",
-    "ionicons": "^7.0.0",
-    "vue": "^3.3.0",
-    "vue-router": "^4.5.0",
-    "vue-youtube-embed": "^2.2.2",
-    "vue3-youtube": "^0.1.9"
-  },
-  "devDependencies": {
-    "@capacitor/cli": "^6.2.0",
-    "@types/youtube": "^0.1.0",
-    "@vitejs/plugin-legacy": "^5.0.0",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/test-utils": "^2.3.0",
-    "autoprefixer": "^10.4.20",
-    "cypress": "^13.5.0",
-    "eslint": "^8.35.0",
-    "eslint-plugin-vue": "^9.9.0",
-    "jsdom": "^22.1.0",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17",
-    "terser": "^5.4.0",
-    "typescript": "~5.6.2",
-    "vite": "~5.2.0",
-    "vitest": "^0.34.6",
-    "vue-tsc": "^2.1.10"
-  },
-  "description": "An Ionic project"
+    "name": "littlepostie",
+    "private": true,
+    "version": "2",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vue-tsc && vite build",
+        "preview": "vite preview",
+        "test:e2e": "cypress run",
+        "test:unit": "vitest",
+        "lint": "eslint ."
+    },
+    "dependencies": {
+        "@capacitor/android": "^6.2.0",
+        "@capacitor/app": "6.0.2",
+        "@capacitor/core": "^6.2.0",
+        "@capacitor/haptics": "6.0.2",
+        "@capacitor/keyboard": "6.0.3",
+        "@capacitor/screen-orientation": "^6.0.3",
+        "@capacitor/splash-screen": "^6.0.3",
+        "@capacitor/status-bar": "6.0.2",
+        "@ionic/vue": "^8.0.0",
+        "@ionic/vue-router": "^8.0.0",
+        "axios": "^1.7.9",
+        "ionicons": "^7.0.0",
+        "vue": "^3.3.0",
+        "vue-router": "^4.5.0",
+        "vue-youtube-embed": "^2.2.2",
+        "vue3-youtube": "^0.1.9"
+    },
+    "devDependencies": {
+        "@capacitor/cli": "^6.2.0",
+        "@types/youtube": "^0.1.0",
+        "@vitejs/plugin-legacy": "^5.0.0",
+        "@vitejs/plugin-vue": "^4.0.0",
+        "@vue/eslint-config-typescript": "^12.0.0",
+        "@vue/test-utils": "^2.3.0",
+        "autoprefixer": "^10.4.20",
+        "cypress": "^13.5.0",
+        "eslint": "^8.35.0",
+        "eslint-plugin-vue": "^9.9.0",
+        "jsdom": "^22.1.0",
+        "postcss": "^8.4.49",
+        "tailwindcss": "^3.4.17",
+        "terser": "^5.4.0",
+        "typescript": "~5.6.2",
+        "vite": "~5.2.0",
+        "vitest": "^0.34.6",
+        "vue-tsc": "^2.1.10"
+    },
+    "description": "An Ionic project"
 }
